--- a/zeroToHero/node/package.json
+++ b/zeroToHero/node/package.json
@@ -1,7 +1,6 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "description": "",
   "main": "script.js",
   "scripts": {
     "start": "nodemon server.js"
@@ -13,6 +12,8 @@
     "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4"
-  }
+  },
+  "description": ""
 }
