--- a/zeroToHero/smartbrainAPI/package.json
+++ b/zeroToHero/smartbrainAPI/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "facespotter",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "clarifai": "^2.9.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-particle-effect-button": "^1.0.1",
-    "react-particles-js": "^2.4.2",
-    "react-scripts": "2.1.3",
-    "react-tilt": "^0.1.4",
-    "tachyons": "^4.11.1"
-  },
+  "name": "smartbrainapi",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start":"nodemon server.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "nodemon": "^1.18.11"
+  }
 }
